--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,4 +1,4 @@
-#form-body{
+body{
     background-color: #d4a172 !important;
     background: url('../src/background.jpg');
     background-size: 100% 100vh;
