Home page for all news completed

--- a/public/templates/template-home.html
+++ b/public/templates/template-home.html
@@ -18,8 +18,9 @@
         <a href="/create"><button class="buttons add-button">Create</button></a>
     </nav>
     <div id="news-board">
-            {%NEWS_CARDS%}
+        
     </div>
+    <script src="../script/newsLoad.js"></script>
 </body>
 
 </html> 
