--- a/public/templates/template-read.html
+++ b/public/templates/template-read.html
@@ -16,7 +16,9 @@
     <nav id="navbar">
         <em><span>T</span>he &nbsp;<span>J</span>ournalist</em>
     </nav>
-    <div id="details"></div>
+    <div id="details">
+        
+    </div>
 </body>
 
 </html> 
