--- a/public/templates/template-form.html
+++ b/public/templates/template-form.html
@@ -19,11 +19,11 @@
 
         <!--Navbar-->
         <nav id="navbar">
-            <em><span>T</span>he &nbsp;<span>J</span>ournalist</em>
+            <em><a href="/"><span>T</span>he &nbsp;<span>J</span>ournalist</a></em>
         </nav>
 
         <!--Form-->
-        <div class="form-holder">
+        <div id="news-board">
             <form>
                 <div class="container">
                     <label for="author">Author</label>
@@ -33,16 +33,15 @@
                 </div>
                 <label class="clearfix" for="heading">Heading</label> <br>
                 <textarea name="title" class="input-fields" id=""></textarea><br>
-                <label for="content">Article</label><br><br>
+                <label for="content">Article</label><br> <br>
                 <textarea name="description" class="input-fields" id="content-box"></textarea><br>
                 <button type="submit" id="form-submit">Submit</button>
             </form>
         </div>
-
     </div>
 
 
-    <script src="../script/form.js"></script>
+    <script src="../script/submitFormData.js"></script>
 </body>
 
 </html>
