--- a/public/templates/template-home.html
+++ b/public/templates/template-home.html
@@ -5,22 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TJ</title>
-    <link rel="stylesheet" href="../css/app.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
-    <nav id="navbar">
-        <em><span>T</span>he &nbsp;<span>J</span>ournalist</em>
-        <a href="/create"><button class="buttons add-button">Create</button></a>
-    </nav>
-    <div id="news-board">
-        
+    <div id="bg-img">
+
+        <nav id="navbar">
+            <em><a href="/"><span>T</span>he &nbsp;<span>J</span>ournalist</a></em>
+            <a href="" id="load-form-button"><button class="buttons add-button">Create</button></a>
+        </nav>
+
+        <div id="news-board">
+                <!-- ROOT DIV -->
+        </div>
+
     </div>
-    <script src="../script/newsLoad.js"></script>
+    <script type ="module" src="../script/routing.js"></script>
+    <script type="module" src="../script/fetchAllData.js"></script>
 </body>
 
-</html> 
+</html>
