--- a/public/templates/template-news-card.html
+++ b/public/templates/template-news-card.html
@@ -1,5 +1,5 @@
 <div class="news-card">
-    <a href="/read"><h2>{%HEADING%}</h2></a>
+    <a href="/news/read"><h2>{%HEADING%}</h2></a>
     <em class="news-date">{%DATE%}</em>
     <em class="news-author">{%AUTHOR_NAME%}</em>
 </div>
