--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,7 +18,7 @@ h1,h2,h3,h4{
     font-size: larger;
     padding: 25px 20px 25px;
     border-bottom: solid 2.5px #f14153;
-    margin-bottom: 3rem;
+    /*margin-bottom: 3rem;*/
     position: relative;
 }
     #navbar >em{
