--- a/public/templates/template-home.html
+++ b/public/templates/template-home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TJ</title>
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
@@ -17,16 +18,16 @@
 
         <nav id="navbar">
             <em><a href="/"><span>T</span>he &nbsp;<span>J</span>ournalist</a></em>
-            <a href="" id="load-form-button"><button class="buttons add-button">Create</button></a>
         </nav>
 
         <div id="news-board">
-                <!-- ROOT DIV -->
+            <!-- ROOT DIV -->
         </div>
 
     </div>
-    <script type ="module" src="../script/routing.js"></script>
+    <script type="module" src="../script/routing.js"></script>
     <script type="module" src="../script/fetchAllData.js"></script>
+    <script type="module" src="../script/helpers.js"></script>
 </body>
 
 </html>
