--- a/public/templates/template-home.html
+++ b/public/templates/template-home.html
@@ -28,6 +28,7 @@
     <script type="module" src="../script/routing.js"></script>
     <script type="module" src="../script/fetchAllData.js"></script>
     <script type="module" src="../script/helpers.js"></script>
+    <script type="module" src="../script/loadOneNews.js"></script>
 </body>
 
 </html>
