--- a/public/css/form.css
+++ b/public/css/form.css
@@ -6,11 +6,6 @@
     object-fit: contain;
 }
 
-#bg-img >#navbar{
-    margin-bottom: 0.5rem;
-}
-
-
 #news-board{
     background-color: rgb(238, 150, 150);
     background: transparent;
@@ -61,6 +56,7 @@
 }
 
 #news-board textarea{
+    resize: vertical;
     width:50%;
     border: 2px solid black;
     position: relative;
