--- a/public/css/index.css
+++ b/public/css/index.css
@@ -62,7 +62,15 @@ h1,h2,h3,h4{
     min-height: 100px; /*remove later*/
     display: grid;
 }
+
 /*for read news page*/
+#news-img{
+    width: 90%;
+    max-height: 80vh;
+    margin-left: 5%;
+    object-position: center;
+}
+
 #delete-button{
     position: absolute;
     right:40vw;
@@ -73,4 +81,35 @@ h1,h2,h3,h4{
     position: absolute;
     right:20vw;
     top:2em;
+}
+
+
+#news-page{
+    width: 80%;
+    margin: auto;
+}
+
+#news-page>h1 {
+    color: #2e2e2e;
+    font-size: clamp(28px, 3.5vw, 42px);
+    font-weight: 900;
+}
+
+#news-page hr {
+    background-color: rgb(52, 122, 207);
+    height: 2px;
+}
+
+#subscript-container {
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#subscript-container em {
+    font-weight: 700;
+}
+
+#subscript-container >em span{
+color: rgb(225, 95, 95);
 }
