Added custom pop ups

--- a/public/templates/template-home.html
+++ b/public/templates/template-home.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -23,11 +25,12 @@
             <!-- ROOT DIV -->
         </div>
     </div>
-    
+
     <script type="module" src="../script/routing.js"></script>
     <script type="module" src="../script/fetchAllData.js"></script>
     <script type="module" src="../script/helpers.js"></script>
     <script type="module" src="../script/loadOneNews.js"></script>
+    <script type="module" src="../script/popUp.js"></script>
 </body>
 
 </html>
