--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -113,3 +114,50 @@ h1,h2,h3,h4{
 #subscript-container >em span{
 color: rgb(225, 95, 95);
 }
+
+/*For pop up*/
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 900,
+    'GRAD' 0,
+    'opsz' 24;
+    color: green;
+}
+
+.material-symbols-outlined.md-48 {
+     font-size: 48px; 
+}
+
+#pop-up {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      top: 30vh;
+      left: 30vw;
+      padding: 7vh 1em 1em;
+      background-color: rgb(165, 229, 178,0.4);
+      width: 40vw;
+      height: 40vh;
+      border-radius: 25px;
+      border: solid 3px rgb(13, 122, 0);
+  
+}
+
+  #pop-up >h2{
+      text-align: center;
+      margin-top: 10px;
+      color: blue
+  }
+
+  #pop-up-button{
+      position: absolute;
+      bottom: 2em;
+      height:2em;
+      width: 6em;
+      border-radius: 5px;
+      background-color: blue;
+      color: white;
+  }
